--- a/content/settings.json
+++ b/content/settings.json
@@ -5,6 +5,6 @@
     "light": "/logo-light.svg",
     "dark": "/logo-dark.svg"
   },
-  "github": "nuxt/content",
-  "twitter": "@nuxt_js"
+  "github": "",
+  "twitter": ""
 }
