--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxt/content-theme-docs": "^0.8.0",
     "@nuxtjs/tailwindcss": "^3.4.2",
     "nuxt": "^2.14.7",
-    "theme-colors": "^0.0.5"
+    "theme-colors": "^0.0.5",
+    "vue-youtube-embed": "^2.2.2"
   },
   "devDependencies": {
     "@nuxtjs/pwa": "^3.3.5"
