--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "onboarding",
+  "name": "onboarding.grey.software",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,14 +10,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxt/components": "^2.0.0-0",
     "@nuxt/content-theme-docs": "^0.8.0",
     "@nuxtjs/tailwindcss": "^3.4.2",
     "nuxt": "^2.14.7",
-    "theme-colors": "^0.0.5",
-    "vue-youtube-embed": "^2.2.2"
-  },
-  "devDependencies": {
-    "@nuxtjs/pwa": "^3.3.5"
+    "theme-colors": "^0.0.5"
   }
 }
