--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt-content-theme-grey-docs": "^0.1.1",
-    "nuxt": "^2.15.2"
-
+    "grey-docs": "^0.4.5",
+    "nuxt": "^2.15.8"
   }
 }
