updated grey-docs, static images, and settings title

--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "title": "Grey Software Onboarding ",
+  "title": "Onboarding",
   "url": "https://onboarding.grey.software/",
   "logo": {
     "light": "/icon.png",
@@ -10,5 +10,4 @@
   "discordUrl": "http://community.grey.software",
   "linkedinUrl": "https://www.linkedin.com/company/grey-software/",
   "twitter": "/grey-software"
-
 }
